# HoudiniUnityAnimationClip

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
otls/: driver_trit.dev.unityanimationclipexporter.1.0.hdalc  sop_tanitta.dev.unityanimationclipexporter.1.0.hdalc  sop_trit.dev.unityanimationclipexporter.1.0.hdalc
src/HoudiniUnityAnimationClip/: _version.py  hpackage.json
src/HoudiniUnityAnimationClip/otls/: driver_trit.dev.unityanimationclipexporter.1.0.hdalc  sop_trit.dev.unityanimationclipexporter.1.0.hdalc
