[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "HoudiniUnityAnimationClip"
description = "This package consists of HDAs that directly export AnimationClips from Houdini to Unity."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10.*"
dependencies = [
    "PyYAML"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/HoudiniUnityAnimationClip/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
